--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -4,16 +4,30 @@
     padding: 1.5rem;
     gap:0.6rem;
     border: thick double #32a1ce;
-    overflow-x:scroll;
-    overflow-y: scroll;
-    height: 12rem;
+    overflow-x:hidden;
+    overflow-y: hidden;
+    /* height: 12rem; */
+
 }
 .profile:hover{
     box-shadow: 5px 5px 10px;
 }
 .profile .profile-heading{
-    font-size: large;
+    font-size: 28px;
 }
 .margin-right {
     margin-right: 1.4rem;
+}
+
+.links{
+    text-decoration:dashed;
+}
+
+.links:hover{
+    text-decoration: dashed;
+}
+
+.form-width{
+    width: 70%;
+    height: 40px;
 }
